Implementação de icones e alterações de styles

--- a/site/index.html
+++ b/site/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Projeto Bootstrap</title>
+    <title>Prototipo Marcenaria</title>
     <!-- Adicione os links para os arquivos CSS do Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <!-- Adicione os links para os arquivos CSS do Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="icon" href="assets/images/icon/icon_ww.ico">
     
     <!-- acrescentar o css produtos da pasta styles -->
     <link rel="stylesheet" href="styles/produtos.css">
@@ -163,10 +164,54 @@
                     <source src="assets/videos/header_video.mp4" type="video/mp4">
                 </video>
             </div>
-            <div class="col-12 col-md-6 d-flex align-items-center">
+            <div class="col-12 col-md-6 d-flex">
                 <div>
                     <h2>Por que contratar a nossa empresa?</h2>
-                    <p class="mt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <div class="row mt-5">
+                        <div class="checkbox-wrapper-31">
+                            <input type="checkbox" checked/>
+                            <svg viewBox="0 0 35.6 35.6">
+                              <circle class="background" cx="17.8" cy="17.8" r="17.8"></circle>
+                              <circle class="stroke" cx="17.8" cy="17.8" r="14.37"></circle>
+                              <polyline class="check" points="11.78 18.12 15.55 22.23 25.17 12.87"></polyline>
+                            </svg>
+                        </div>              
+                        <h5 class="ml-2">Preços competitivos</h5>
+                    </div>
+                    <div class="row my-2">
+                        <div class="checkbox-wrapper-31">
+                            <input type="checkbox" checked/>
+                            <svg viewBox="0 0 35.6 35.6">
+                              <circle class="background" cx="17.8" cy="17.8" r="17.8"></circle>
+                              <circle class="stroke" cx="17.8" cy="17.8" r="14.37"></circle>
+                              <polyline class="check" points="11.78 18.12 15.55 22.23 25.17 12.87"></polyline>
+                            </svg>
+                        </div>              
+                        <h5 class="ml-2">Atendimento personalizado</h5>
+                    </div>
+                    <div class="row">
+                        <div class="checkbox-wrapper-31">
+                            <input type="checkbox" checked/>
+                            <svg viewBox="0 0 35.6 35.6">
+                              <circle class="background" cx="17.8" cy="17.8" r="17.8"></circle>
+                              <circle class="stroke" cx="17.8" cy="17.8" r="14.37"></circle>
+                              <polyline class="check" points="11.78 18.12 15.55 22.23 25.17 12.87"></polyline>
+                            </svg>
+                        </div>              
+                        <h5 class="ml-2">Experiência no mercado</h5>
+                    </div>
+                    <div class="row my-2">
+                        <div class="checkbox-wrapper-31">
+                            <input type="checkbox" checked/>
+                            <svg viewBox="0 0 35.6 35.6">
+                              <circle class="background" cx="17.8" cy="17.8" r="17.8"></circle>
+                              <circle class="stroke" cx="17.8" cy="17.8" r="14.37"></circle>
+                              <polyline class="check" points="11.78 18.12 15.55 22.23 25.17 12.87"></polyline>
+                            </svg>
+                        </div>              
+                        <h5 class="ml-2">Qualidade garantida</h5>
+                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -177,7 +222,7 @@
         <div class="row">
             <div class="col-12 col-md-6 py-4 text-end d-flex flex-column justify-content-between my-3 my-md-0" id="text-info">
                 <div>
-                    <h2><i class="fas fa-map-marker-alt" style="color: gray"></i> Onde estamos localizados</h2>
+                    <h2 id="titleOndeEstamos"><i class="fas fa-map-marker-alt" style="color: gray"></i> Onde estamos localizados</h2>
                     <p class="mt-5 mr-3">Rua dos Bobos, nº 0</p>
                     <p class="mr-3"> Bairro da Lapa, São Paulo - SP</p>
                     <p class="mr-3">CEP: 00000-000</p>
