componente checkbox estatico

--- a/site/index.html
+++ b/site/index.html
@@ -169,7 +169,7 @@
                     <h2>Por que contratar a nossa empresa?</h2>
                     <div class="row mt-5 d-flex align-items-center">
                         <div class="checkbox-wrapper-31">
-                            <input type="checkbox" checked/>
+                            <input type="checkbox" checked disabled/>
                             <svg viewBox="0 0 35.6 35.6">
                               <circle class="background" cx="17.8" cy="17.8" r="17.8"></circle>
                               <circle class="stroke" cx="17.8" cy="17.8" r="14.37"></circle>
@@ -180,7 +180,7 @@
                     </div>
                     <div class="row my-2 d-flex align-items-center">
                         <div class="checkbox-wrapper-31">
-                            <input type="checkbox" checked/>
+                            <input type="checkbox" checked disabled/>
                             <svg viewBox="0 0 35.6 35.6">
                               <circle class="background" cx="17.8" cy="17.8" r="17.8"></circle>
                               <circle class="stroke" cx="17.8" cy="17.8" r="14.37"></circle>
@@ -191,7 +191,7 @@
                     </div>
                     <div class="row d-flex align-items-center">
                         <div class="checkbox-wrapper-31">
-                            <input type="checkbox" checked/>
+                            <input type="checkbox" checked disabled/>
                             <svg viewBox="0 0 35.6 35.6">
                               <circle class="background" cx="17.8" cy="17.8" r="17.8"></circle>
                               <circle class="stroke" cx="17.8" cy="17.8" r="14.37"></circle>
@@ -202,7 +202,7 @@
                     </div>
                     <div class="row my-2 d-flex align-items-center">
                         <div class="checkbox-wrapper-31">
-                            <input type="checkbox" checked/>
+                            <input type="checkbox" checked disabled/>
                             <svg viewBox="0 0 35.6 35.6">
                               <circle class="background" cx="17.8" cy="17.8" r="17.8"></circle>
                               <circle class="stroke" cx="17.8" cy="17.8" r="14.37"></circle>
