Implementações de alt para SEO

--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prototipo Marcenaria</title>
+    <title>Marcenaria Generic - Contagem</title>
     <!-- Adicione os links para os arquivos CSS do Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
@@ -28,7 +28,7 @@
     <div class="container-fluid pb-4" id="header">
         <div class="row">
             <div class="col-12 text-center">
-                <img src="assets/images/generic_logo.png" class="img-fluid" alt="Logo da empresa" style="max-width: 250px;">
+                <img src="assets/images/generic_logo.png" class="img-fluid" alt="Marcenaria Generic - Contagem - MG" style="max-width: 250px;">
             </div>
         </div>
         <div class="row">
@@ -51,17 +51,17 @@
     <div class="container py-5">
         <div class="row">
             <div class="col-12 col-md-4 text-center">
-                <img src="assets/images/icone_produtos.png" class="img-fluid" alt="Sofá" style="max-width: 40%;">
+                <img src="assets/images/icone_produtos.png" class="img-fluid" alt="Qualidade do produto - Marcenaria Generic - Contagem" style="max-width: 40%;">
                 <h2 class="mt-3">Produtos</h2>
                 <p>Qualidade reconhecida do material e variedade nos produtos</p>
             </div>
             <div class="col-12 col-md-4 text-center">
-                <img src="assets/images/icone_sob_medida.png" class="img-fluid" alt="Mesa" style="max-width: 40%;">
+                <img src="assets/images/icone_sob_medida.png" class="img-fluid" alt="Moveis planejados sob medida" style="max-width: 40%;">
                 <h2 class="mt-3">Sob medida</h2>
                 <p>Serviço personalizado, atendendo a sua necessidade</p>
             </div>
             <div class="col-12 col-md-4 text-center">
-                <img src="assets/images/icone_velocidade_entrega.png" class="img-fluid" alt="Cama" style="max-width: 40%;">
+                <img src="assets/images/icone_velocidade_entrega.png" class="img-fluid" alt="Entregamos em Belo Horizonte e Contagem" style="max-width: 40%;">
                 <h2 class="mt-3">Entrega rápida</h2>
                 <p>Utilizando os melhores recursos para entregas no menor tempo possível</p>
             </div>
@@ -115,13 +115,13 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active" style="max-height: 460px;">
-                            <img src="assets/images/office/desk_1.jpeg" class="d-block w-100" alt="Produto 1">
+                            <img src="assets/images/office/desk_1.jpeg" class="d-block w-100" alt="Mesas de escritório">
                         </div>
                         <div class="carousel-item" style="max-height: 460px;">
-                            <img src="assets/images/office/desk_2.jpeg" class="d-block w-100" alt="Produto 2">
+                            <img src="assets/images/office/desk_2.jpeg" class="d-block w-100" alt="Armários planejados">
                         </div>
                         <div class="carousel-item" style="max-height: 460px;">
-                            <img src="assets/images/office/desk_3.jpeg" class="d-block w-100" alt="Produto 3">
+                            <img src="assets/images/office/desk_3.jpeg" class="d-block w-100" alt="Paineis para TV e Prateleiras">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselProdutos" role="button" data-slide="prev">
@@ -142,16 +142,16 @@
         <h2 class="text-center">Nossos Parceiros</h2>
         <div class="row">
             <div class="col-12 col-md-3 text-center my-3">
-                <img src="assets/images/partners/partner_generic_1.png" class="img-fluid" alt="Parceiro 1">
+                <img src="assets/images/partners/partner_generic_1.png" class="img-fluid" alt="Armarios para casa e lojas">
             </div>
             <div class="col-12 col-md-3 text-center my-3">
-                <img src="assets/images/partners/partner_generic_2.png" class="img-fluid" alt="Parceiro 2">
+                <img src="assets/images/partners/partner_generic_2.png" class="img-fluid" alt="Serviço personalizado para comércio">
             </div>
             <div class="col-12 col-md-3 text-center my-3">
-                <img src="assets/images/partners/partner_generic_3.png" class="img-fluid" alt="Parceiro 3">
+                <img src="assets/images/partners/partner_generic_3.png" class="img-fluid" alt="Variedade e atendimento de qualidade">
             </div>
             <div class="col-12 col-md-3 text-center my-3">
-                <img src="assets/images/partners/partner_generic_4.png" class="img-fluid" alt="Parceiro 4">
+                <img src="assets/images/partners/partner_generic_4.png" class="img-fluid" alt="Atendendo região metropolitana de BH">
             </div>
         </div>
     </div>
@@ -249,7 +249,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-6">
-                <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.073394394073!2d-46.68807368502147!3d-23.55051968467914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5b8b0f3d3d3f%3A0x8e3e3e3e3e3e3e3e!2sRua%20dos%20Bobos%2C%20n%C2%BA%200%20-%20Bairro%20da%20Lapa%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2000000-000!5e0!3m2!1spt-BR!2sbr!4v1601550730003!5m2!1spt-BR!2sbr" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.073394394073!2d-46.68807368502147!3d-23.55051968467914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5b8b0f3d3d3f%3A0x8e3e3e3e3e3e3e3e!2sRua%20dos%20Bobos%2C%20n%C2%BA%200%20-%20Bairro%20da%20Lapa%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2000000-000!5e0!3m2!1spt-BR!2sbr!4v1601550730003!5m2!1spt-BR!2sbr" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" alt="Petrolândia - Contagem - MG"></iframe>
             </div>
         </div>
     </div>
