--- a/site/index.html
+++ b/site/index.html
@@ -157,7 +157,7 @@
     </div>
 
    <!-- secao com uma coluna com video sobre a empresa e na outra coluna um texto sobre porque contratar nossa empresa -->
-    <div class="container-fluid py-3 text-white" style="background-color: black;">
+    <div class="container-fluid py-3 text-white" id="info-video">
         <div class="row">
             <div class="col-12 col-md-6">
                 <video width="100%" height="315" autoplay loop muted playsinline>
