Alterações de CNAME e etc

--- a/site/index.html
+++ b/site/index.html
@@ -255,7 +255,7 @@
     </div>
     <!-- footer somente com o texto de direitos autorais cnpj nome fantasia razao social e copyrigth -->
     <footer class="container-fluid text-center py-3 bg-black">
-        <p>&copy; 2020 - CNPJ: 00.000.000/0000-00 - Nome Fantasia - Razão Social</p>
+        <p>&copy; 2024 - CNPJ: 00.000.000/0000-00 - WOOD WORK GENERIC - Marcenaria Generic</p>
     </footer>
 
     <!-- create float button on page for contact via whatsapp -->
