Melhorias na performance do site

--- a/index.html
+++ b/index.html
@@ -12,16 +12,8 @@
     <link rel="icon" href="assets/images/icon/icon_ww.ico">
     
     <!-- acrescentar o css produtos da pasta styles -->
-    <link rel="stylesheet" href="styles/produtos.css">
-    <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/info.css">
-    <link rel="stylesheet" href="styles/info-video.css">
-    <link rel="stylesheet" href="styles/parceiros.css">
+    <link rel="stylesheet" href="styles/styles.css">
 
-    <!-- Adicione os links para as fontes do Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet"> 
-    
 </head>
 <body>
     <!-- Criar um banner com a logo da empresa uma mensagem de efeito e um botão de rolar para baixo -->
@@ -76,31 +68,31 @@
                 <div class="row my-4">
                     <div class="col-6 text-center opcaoTipo my-1">
                         <div class="container" data-option="living-room">
-                            <i class="fas fa-tv fa-pulse fa-2x d-block mx-auto"></i>
+                            <i class="fas fa-tv fa-2x d-block mx-auto"></i>
                             <h6 class="text-center">Sala de Estar</h6>
                         </div>
                     </div>
                     <div class="col-6 text-center opcaoTipo my-1">
                         <div class="container" data-option="bedroom">
-                            <i class="fas fa-bed fa-pulse fa-2x d-block mx-auto"></i>
+                            <i class="fas fa-bed fa-2x d-block mx-auto"></i>
                             <h6 class="text-center">Quarto</h6>
                         </div>
                     </div>
                     <div class="col-6 text-center opcaoTipo my-1">
                         <div class="container" data-option="dining-room">
-                            <i class="fas fa-utensils fa-pulse fa-2x d-block mx-auto"></i>
+                            <i class="fas fa-utensils fa-2x d-block mx-auto"></i>
                             <h6 class="text-center">Sala de Jantar</h6>
                         </div>
                     </div>
                     <div class="col-6 text-center opcaoTipo my-1">
                         <div class="container" data-option="kitchen">
-                            <i class="fas fa-coffee fa-pulse fa-2x d-block mx-auto"></i>
+                            <i class="fas fa-coffee fa-2x d-block mx-auto"></i>
                             <h6 class="text-center">Cozinha</h6>
                         </div>
                     </div>
                     <div class="col-12 text-center opcaoTipo my-1">
                         <div class="container" data-option="office">
-                            <i class="fas fa-laptop fa-pulse fa-2x d-block mx-auto"></i>
+                            <i class="fas fa-laptop fa-2x d-block mx-auto"></i>
                             <h6 class="text-center">Escritório</h6>
                         </div>
                     </div>
@@ -266,12 +258,13 @@
         ><i class="fab fa-whatsapp"></i
     ></a>
 
+    <div id="loader">
+        <div class="spinner"></div>
+    </div>
+
     <!-- Adicione os scripts do Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-    <!-- adiciona os scripts da pasta scripts do projeto -->
     <script src="scripts/produtos.js"></script>
 </body>
 </html>
