Implementação de sitemap e meta description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Marcenaria Generic - Contagem - MG - Localizada no bairro Petrolândia na cidade de Contagem em Minas Gerais, a empresa é focada na entrega de produtos em MADEIRA e METAL, entregando produtos com alta qualidade e tempo hábil, além de entregar movéis planejados de acordo coma necessidade do cliente.">
+
     <title>Marcenaria Generic - Contagem</title>
     <!-- Adicione os links para os arquivos CSS do Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -241,7 +243,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-6">
-                <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.073394394073!2d-46.68807368502147!3d-23.55051968467914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5b8b0f3d3d3f%3A0x8e3e3e3e3e3e3e3e!2sRua%20dos%20Bobos%2C%20n%C2%BA%200%20-%20Bairro%20da%20Lapa%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2000000-000!5e0!3m2!1spt-BR!2sbr!4v1601550730003!5m2!1spt-BR!2sbr" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" alt="Petrolândia - Contagem - MG"></iframe>
+                <iframe id="mapa" title="Mapa de endereço da Marcenaria" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.073394394073!2d-46.68807368502147!3d-23.55051968467914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5b8b0f3d3d3f%3A0x8e3e3e3e3e3e3e3e!2sRua%20dos%20Bobos%2C%20n%C2%BA%200%20-%20Bairro%20da%20Lapa%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2000000-000!5e0!3m2!1spt-BR!2sbr!4v1601550730003!5m2!1spt-BR!2sbr" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" alt="Petrolândia - Contagem - MG"></iframe>
             </div>
         </div>
     </div>
